--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -6,7 +6,7 @@ env:
   TF_CLOUD_ORGANIZATION: "position-pal"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "position-pal-terraform"
-  CONFIG_DIRECTORY: "plan"
+  CONFIG_DIRECTORY: "./plan"
 
 jobs:
   terraform:
@@ -34,7 +34,7 @@ jobs:
             workspace: ${{ env.TF_WORKSPACE }}
             configuration_version: ${{ steps.plan-upload.outputs.configuration_version_id }}
             plan_only: true
-            
+
         - name: Update PR
           uses: actions/github-script@v6
           id: plan-comment
