ci: change env CONFIG_DIRECTORY to ./

--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -8,7 +8,7 @@ env:
     TF_CLOUD_ORGANIZATION: "position-pal"
     TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
     TF_WORKSPACE: "position-pal-terraform"
-    CONFIG_DIRECTORY: ./plan"
+    CONFIG_DIRECTORY: "./"
 
 jobs:
   terraform:
