--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -43,30 +43,33 @@ jobs:
             script: |
                 // 1. Retrieve existing bot comments for the PR
                 const { data: comments } = await github.rest.issues.listComments({
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    issue_number: context.issue.number,
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: context.issue.number,
                 });
                 const botComment = comments.find(comment => {
-                    return comment.user.type === 'Bot' && comment.body.includes('HCP Terraform Plan Output')
+                  return comment.user.type === 'Bot' && comment.body.includes('HCP Terraform Plan Output')
                 });
-                const output = `#### HCP Terraform Plan Output
-                    \`\`\`
-                    Plan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy.
-                    \`\`\`
-                    [HCP Terraform Plan](${{ steps.plan-run.outputs.run_link }})
-                    `;
+                const output = [
+                    '#### HCP Terraform Plan Output',
+                    '',
+                    '```',
+                    `Plan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy.`,
+                    '```',
+                    '',
+                    `[HCP Terraform Plan](${{ steps.plan-run.outputs.run_link }})`
+                ].join('\n');
                 // 3. Delete previous comment so PR timeline makes sense
                 if (botComment) {
-                    github.rest.issues.deleteComment({
+                  github.rest.issues.deleteComment({
                     owner: context.repo.owner,
                     repo: context.repo.repo,
                     comment_id: botComment.id,
-                    });
+                  });
                 }
                 github.rest.issues.createComment({
-                    issue_number: context.issue.number,
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    body: output
+                  issue_number: context.issue.number,
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  body: output
                 });
