ci: execute workflows only when files in the plan folder are modified

--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -3,6 +3,8 @@ on:
     push:
         branches:
         - main
+        paths:
+        - 'plan/**'
   
 env:
     TF_CLOUD_ORGANIZATION: "position-pal"
