--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,6 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "local>position-pal/renovate-config"
-  ]
+  ],
+  "automerge": false
 }
